--- a/src/elements/forms/Main-output-past.css
+++ b/src/elements/forms/Main-output-past.css
@@ -13,8 +13,6 @@
 .weather-block__container {
     display: flex;
     justify-content: center;
-    width: 610px;
-    height: 238px;
 }
 .weather-block__container-for-single{
     display: flex;
